k8s/base/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: last-of-guss
spec:
  selector:
    app: backend
  ports:
    - port: 3001
      targetPort: 3001

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: last-of-guss
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      # affinity:
      #   podAntiAffinity:
      #     preferredDuringSchedulingIgnoredDuringExecution:
      #       - weight: 100
      #         podAffinityTerm:
      #           labelSelector:
      #             matchLabels:
      #               app: backend
      #           topologyKey: kubernetes.io/hostname
      containers:
        - name: backend
          image: ghcr.io/vanekt/the-last-of-guss-backend:v0.1.2
          ports:
            - containerPort: 3001
          # resources:
          #   requests:
          #     cpu: 50m
          #     memory: 64Mi
          #   limits:
          #     cpu: 250m
          #     memory: 256Mi
          readinessProbe:
            tcpSocket:
              port: 3001
            initialDelaySeconds: 3
            periodSeconds: 5
          # livenessProbe:
          #   tcpSocket:
          #     port: 3001
          #   initialDelaySeconds: 10
          #   periodSeconds: 10

# ---
# apiVersion: policy/v1
# kind: PodDisruptionBudget
# metadata:
#   name: backend
#   namespace: last-of-guss
# spec:
#   minAvailable: 2
#   selector:
#     matchLabels:
#       app: backend
