k8s/base/frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: last-of-guss
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: last-of-guss
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: ghcr.io/vanekt/the-last-of-guss-frontend:v0.1.2
          ports:
            - containerPort: 80
          # resources:
          #   requests:
          #     cpu: 20m
          #     memory: 32Mi
          #   limits:
          #     cpu: 100m
          #     memory: 64Mi
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 2
            periodSeconds: 5
